--- a/rssFeedDemo.html
+++ b/rssFeedDemo.html
@@ -2,7 +2,7 @@
 <head><title>RSS Feeds Demo</title><!-- bit.ly/-->
 <script type="text/javascript">
 if(!document.cookie) {
-	window.location="workshop_login.php?bounce=rssDemo";
+	window.location="workshop_login.php?bounce=rssDemo";//login
 }
 function showRSS(str)
 {
