--- a/GoofOffTimer/bg.html
+++ b/GoofOffTimer/bg.html
@@ -1,28 +1,27 @@
-<html>
+<!DOCTYPE html>
 <head>
+<meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="bg.css" />
+
 </head>
 <body id="popup" class="popup">
-<div id="myGdSites" class="myGdSites">
-
-<ul id="goodSites" class="goodSites">Good sites.	
-</ul>
-<br>
-Add a site that enriches lives and makes the world a better place.
-<textarea id="addQualitySite">
-
-</textarea>
-</div>
-<div id="myBadSites" class="myBadSites">
-<ul id="badSites" class="badSites">	Bad Sites!
-</ul>
-<br>
-Add a site that should be blocked!
-<textarea id="addSite4Blocking"></textarea>
-</div>
-<div id="footer" class="footer">
-Please do NOT enter the www or http, just theSiteName.com - or it won't work.<br> 
-Review the examples if it doesn't make sense. Thanks!
-</div>
+	<div id="myGdSites" class="myGdSites">
+		<br>
+		Add a site that enriches lives and makes the world a better place.
+		<textarea id="addQualitySite"></textarea>
+		<span id="goodSitesList">If you don't see anything here
+		</span>
+		<script src="bg.js"></script>
+	</div>
+	<div id="myBadSites" class="myBadSites">
+		<br>
+		Add a site that should be blocked!
+		<textarea id="addSite4Blocking"></textarea>
+		<span id="badSitesList">please reload the page!
+		</span>
+		<script src="bg.js"></script>
+	</div>
+	<div id="footer" class="footer"><!-- put paypal link here-->
+	</div>
 </body>
 </html>
