General updates on March 6 2016

--- a/GoofOffTimer/bg.html
+++ b/GoofOffTimer/bg.html
@@ -5,23 +5,8 @@
 
 </head>
 <body id="popup" class="popup">
-	<div id="myGdSites" class="myGdSites">
-		<br>
-		Add a site that enriches lives and makes the world a better place.
-		<textarea id="addQualitySite"></textarea>
-		<span id="goodSitesList">If you don't see anything here
-		</span>
-		<script src="bg.js"></script>
-	</div>
-	<div id="myBadSites" class="myBadSites">
-		<br>
-		Add a site that should be blocked!
-		<textarea id="addSite4Blocking"></textarea>
-		<span id="badSitesList">please reload the page!
-		</span>
-		<script src="bg.js"></script>
-	</div>
-	<div id="footer" class="footer"><!-- put paypal link here-->
-	</div>
+	<span id="gsl"></span>
+	<span id="bsl"></span>
+	<a href="manager.html" target="_blank">Edit Sites List</a>
 </body>
 </html>
