--- a/angular demo/VisIt_angular.html
+++ b/angular demo/VisIt_angular.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app='MyFirstApp' ng-controller="mainController">
+<html lang="en" ng-app='Visit_App' ng-controller="mainController">
 <head>
 
 <!-- Designed by Mario Caiti	-->
@@ -7,16 +7,15 @@
 <title>Visualize It! (for angular JS)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">		<!-- for bootstrap scaling-->
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" type="text/javascript">
 </script>																		<!-- declare angular	-->
-<script src="maincontroller.js" type="text/javascript"></script>					<!-- root controller	-->
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">							<!-- declare bootstrap -->
-<link href="visIt_angular.css" rel="stylesheet">											<!-- my custom CSS -->
+<script src="maincontroller.js" type="text/javascript"></script>				<!-- root controller	-->
+<script src="plan.js" type="text/javascript"></script>							<!-- and the plan class file	-->
+<link href="bootstrap.min.css" rel="stylesheet">								<!-- declare bootstrap in bootstrap/css/ when live-->
+<link href="visIt_angular.css" rel="stylesheet">								<!-- my custom CSS, rewrite in Sass or SCSS? -->
 </head>
 <body>
 <script src="bootstrap/js/bootstrap.min.js"></script>											<!-- declare bootstrap JS?? -->
-<script src="http://code.jquery.com/jquery-1.10.2.js"></script>										<!-- declare jquery here it's faster	-->
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 <header id="myHeader" class="row, col-lg-12 col-md-12 col-sm-12 col-xs-12">
 	<div class="row, col-lg-2 col-md-2 col-sm-2 col-xs-4">
 	<a href="http://www.mariocaiti.com">
@@ -33,61 +32,53 @@
 <div id='calc' class='calc' ng-controller='mainController'>
 	<div ng-controller='mainController'>
 		<form>
-		<div id="enterSalary" class="col-lg-2 col-md-2 col-sm-12">
-			<label>What do you make weekly?</label>
-			<input type='number' ng-model='enterSalary' ng-change="write_SalAcknowlegemt(enterSalary)"/>
-			<button ng-show="enterSalary>0" id="toExpenses">&#x25BA;</button>
-			<script type="text/javascript">
-			$(document).on('click', '#toExpenses', function(){
-				$("div.enterExpenses").animate({opacity: 1},800);
-			});
-			</script>
-		</div>
-		<div id="enterExpenses" class="col-lg-6 col-md-6 col-sm-12, enterExpenses">
-			{{enterSalary | currency}}{{acknowledgement}}<br>Now we need a breakdown of what you spend on a <em>weekly</em> basis. Just divide your monthly bill by 4.<br>
-			<label>Rent or mortgage:</label>
-			<input type='number' step="0.01" min="0" ng-model='expenses.enterRent'
-			ng-change="getExpenses(expenses.enterRent, expenses.enterGroceries, expenses.enterCommute, expenses.enterUtils, expenses.enterTainment, expenses.enterKids); makeBudget(enterSalary, weeklyExpenses)"/>
-			 	{{expenses.enterRent | currency}}<br>
-			<label>Groceries:</label>
-			<input type='number' step="0.01" min="0" ng-model='expenses.enterGroceries' 
-			ng-change="getExpenses(expenses.enterRent, expenses.enterGroceries, expenses.enterCommute, expenses.enterUtils, expenses.enterTainment, expenses.enterKids); makeBudget(enterSalary, weeklyExpenses)"/>
-			 	{{expenses.enterGroceries | currency}}<br>
-			<label>Your car, commute or other transportation:</label>
-			<input type='number' step="0.01" min="0" ng-model='expenses.enterCommute' 
-			ng-change="getExpenses(expenses.enterRent, expenses.enterGroceries, expenses.enterCommute, expenses.enterUtils, expenses.enterTainment, expenses.enterKids); makeBudget(enterSalary, weeklyExpenses)"/>
-			 	{{expenses.enterCommute | currency}}<br>
-			<label>Utilities:</label>
-			<input type='number' step="0.01" min="0" ng-model='expenses.enterUtils' 
-			ng-change="getExpenses(expenses.enterRent, expenses.enterGroceries, expenses.enterCommute, expenses.enterUtils, expenses.enterTainment, expenses.enterKids); makeBudget(enterSalary, weeklyExpenses)"/>
-			 	{{expenses.enterUtils | currency}}<br>
-			<label>Home entertainment, cable, internet, DVD subscriptions:</label>
-			<input type='number' step="0.01" min="0" ng-model='expenses.enterTainment' 
-			ng-change="getExpenses(expenses.enterRent, expenses.enterGroceries, expenses.enterCommute, expenses.enterUtils, expenses.enterTainment, expenses.enterKids); makeBudget(enterSalary, weeklyExpenses)"/>
-			 	{{expenses.enterTainment | currency}}<br>
-			<label>Kids' college fund:</label>
-			<input type='number' step="0.01" min="0" ng-model='expenses.enterKids' 
-			ng-change="getExpenses(expenses.enterRent, expenses.enterGroceries, expenses.enterCommute, expenses.enterUtils, expenses.enterTainment, expenses.enterKids); makeBudget(enterSalary, weeklyExpenses)"/>
-			 	{{expenses.enterKids | currency}}<br>
-			-----------------------------------------<br>
-			Weekly expenses: {{weeklyExpenses | currency}}<br>
-			<button ng-show="weeklyBudget>0" id="toGoals">&#x25BA;</button><br>
-			<script type="text/javascript">
-			$("#toGoals").click(function(){
-				$("div.enterGoals").animate({opacity: 1},800);
-				$("div.goalsChart div").animate({opacity: 1},800);
-				$("footer").animate({opacity: 1},800);
-			});
-			</script>
-		</div>
-		<div id="enterGoals" class="col-lg-4 col-md-4 col-sm-12, enterGoals">
+			<div id="enterSalary" class="col-lg-2 col-md-2 col-sm-12">
+				<label>What do you make weekly?</label>
+				<input type='number' 
+					ng-model='enterSalary' 
+					ng-model-options="{updateOn: 'blur'}" />
+				<button ng-show="enterSalary>0" id="toExpenses" ng-click="write_SalAcknowlegemt(enterSalary); showExpenses=true">&#x25BA;</button>
+<!-- <script type="text/javascript">$(document).on('click', '#toExpenses', function(){$("div.enterExpenses").animate({opacity: 1},800);});</script> -->
+			</div>
+		</form>
+		<form>
+			<div id="enterExpenses" class="col-lg-6 col-md-6 col-sm-12, enterExpenses" ng-show="showExpenses">
+				<span ng-bind="myPlan.salary | currency"></span><span ng-bind="acknowledgement"></span>
+				<br>Now we need a breakdown of what you spend on a <em>weekly</em> basis. Just divide your monthly bill by 4.<br>
+			
+				<div ng-repeat="t in myPlan.expenses">
+				<label>{{t.label}}</label>
+					<input type='number' step="0.01" min="0" 
+						ng-model="t.value"
+						ng-model-options="{updateOn: 'blur'}" 
+						ng-change="plan.setExpenseAmt(t.label, t.value); plan.makeBudget(t.action, weeklyExpenses)"/>
+					{{t.value | currency}}<br>
+				</div>
+				-----------------------------------------<br>
+				Weekly expenses: <span ng-bind="plan.getExpenses() | currency"></span><br>
+				<button ng-show="weeklyBudget>0" id="toGoals" ng-click="showGoals=true">&#x25BA;</button><br>
+<!-- <script type="text/javascript">$("#toGoals").click(function(){$("div.enterGoals").animate({opacity: 1},800);$("div.goalsChart div").animate({opacity: 1},800);$("footer").animate({opacity: 1},800);});</script>-->
+			</div>
+		</form>
+		<div id="enterGoals" class="col-lg-4 col-md-4 col-sm-12, enterGoals" ng-show="showGoals">
 			Then we are starting with a weekly budget of
 			<span ng-bind="weeklyBudget | currency"></span>
 			to work with.
 			<br>
-			What are you saving and budgeting for? (Please enter an annual estimate, and we'll chop it into a weekly budget in the grid below.)<br>
-			
-			<div class="enterHomeBudget">
+			What are you saving and budgeting for? (Please enter an annual estimate, and we'll chop it into a weekly budget in the grid below.)
+			<br>
+			<div ng-repeat="g in myPlan.goals">	
+				<form class="enter{{g.name}}budget">
+					<submit ng-click="plan.setThisGoal(g.action, 'g.action')">
+						<label>{{g.label}}</label>:
+					</submit>
+					<input type='number' step="0.01" min="0" 
+						ng-model='g.value'
+						ng-model-options="{updateOn: 'blur'}"/>
+					Test: goal[g].action is {{g}}
+				</form>
+			</div>
+			<!--div class="enterHomeBudget">
 				<submit ng-click="setThisGoal(goals.expHome, 'expHome')">
 					Buying a home:
 				</submit>
@@ -148,19 +139,13 @@
 					Hobbies:
 				</submit>
 				<input type='number' step="0.01" min="0" ng-model='goals.expNerd'/> 				
-			</div><br>
+			</div><br-->
 			What else? (we are working on this)
-			<!--div ng-repeat="goal in goals">	<- use this formula for writing member created goals!!!
-			<div class="enter"+{{goal}}>
-				<submit ng-click="setThisGoal(\"+{{goals[goal]}}+\", '"+goal+"')">
-					{{goal}}
-				</submit>
-				<input type='number' step="0.01" min="0" ng-model={{goals[goal]}}/>
-			</div-->
+			
 		</div>
 		
 	<!-- dynamic labels (graph from scratch!) here!!!-->
-		<div id="goalsChart" class="row, col-lg-12 col-md-12 col-sm-12 col-xs-12, goalsChart" style="max-height:{{weeklyBudgetRevised | number:0}}px;">
+		<div id="goalsChart" class="row, col-lg-12 col-md-12 col-sm-12 col-xs-12, goalsChart" style="max-height:{{weeklyBudgetRevised | number:0}}px;" ng-show="showGoals">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12">
 				<span ng-bind="weeklyBudget | currency" ng-style="{'font-size' :weeklyBudget + 'px'}"></span> - 
 			</div>
